content: Add services page, remove team page
- Add content/pages/services.md with service offerings
- Remove content/pages/team.md (team page no longer needed)

--- a/themes/tecnoter.io/layouts/index.html
+++ b/themes/tecnoter.io/layouts/index.html
@@ -21,6 +21,7 @@
 </head>
 <body class="">
 {{ partial "hardware.html" . }}
+{{ partial "hub_frame.html" . }}
 {{ partial "terminal_frame.html" . }}
 
 <script>
